# tessera-python

./: .gitignore  LICENSE  Makefile  README.md  api.md  openapi.json  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
docs/: concepts.md  configuration.md  getting-started.md
docs/guides/: error-handling.md  memory.md  procedures-and-resources.md  search-and-query.md
docs/integrations/: mcp.md
examples/: quickstart.py
integrations/claude-code/: .mcp.json  CLAUDE.md
integrations/claude-code/.claude-plugin/: plugin.json
integrations/claude-code/hooks/: _hooklib.py  hooks.json  session_end.py  session_start.py  user_prompt_submit.py
integrations/claude-code/skills/using-tessera-memory/: SKILL.md
integrations/codex/: AGENTS.md  config.toml
scripts/: generate_models.py
src/tessera_memory/: __init__.py  _base_client.py  _client.py  _exceptions.py  _pagination.py  _resource.py  _response.py  _version.py  models.py
src/tessera_memory/resources/: __init__.py  jobs.py  maintenance.py  memories.py  procedures.py  query.py  resources.py  search.py
tests/: _helpers.py  conftest.py  test_advanced.py  test_client.py  test_errors.py  test_jobs_maintenance.py  test_live.py  test_memories.py  test_pagination.py  test_procedures.py  test_resources.py  test_retry.py  test_search_query.py
